--- a/templates/fluid-comment-formatter.html.twig
+++ b/templates/fluid-comment-formatter.html.twig
@@ -27,5 +27,5 @@
  */
 #}
 <section{{ attributes }}>
-  <div id="fluid-comment-root" data-fluid-comment-commented-resource-url="{{ commented_resource_url }}" data-fluid-comment-filter-default-format="{{ filter_default_format }}" data-jsonapi-comment-type="{{ comment_type }}" ></div>
+  <div id="fluid-comment-root" data-fluid-comment-commented-resource-url="{{ commented_resource_url }}" data-fluid-comment-filter-default-format="{{ filter_default_format }}" data-jsonapi-comment-type="{{ comment_type }}" data-jsonapi-comment-field-name="{{ comment_field_name }}"></div>
 </section>
